@@ -1,0 +1,24 @@
+<?php
+
+/**
+ * HttpRequest was renamed to MWHttpRequest in order
+ * to prevent conflicts with PHP's HTTP extension
+ * which also defines an HttpRequest class.
+ * http://www.php.net/manual/en/class.httprequest.php
+ *
+ * This is for backwards compatibility.
+ */
+
+class HttpRequest extends MWHttpRequest { }
+<?php
+
+/**
+ * HttpRequest was renamed to MWHttpRequest in order
+ * to prevent conflicts with PHP's HTTP extension
+ * which also defines an HttpRequest class.
+ * http://www.php.net/manual/en/class.httprequest.php
+ *
+ * This is for backwards compatibility.
+ */
+
+class HttpRequest extends MWHttpRequest { }
